Fix Contrast Errors

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
 :root{
   --white:white;
@@ -18,6 +11,8 @@ body {
     background-color: var(--blue);
     text-align: center;
     color: var(--white);
+    font-weight: bold;
+    font-size: larger;
 }
 
 button {
@@ -33,6 +28,4 @@ input {
     border: 1px solid var(--white)  
 }
 
-.bold {
-    font-weight: bold;
-}
+
